// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`border 1`] = `
{
  "annotation": {},
  "chartType": "columnParallel",
  "config": {
    "columnParallel": {
      "annotation": {
        "annotationArea": {
          "areaBorderColor": "#BCC1CB",
          "areaBorderRadius": 0,
          "areaBorderWidth": 0,
          "areaColor": "#BCC1CB",
          "areaColorOpacity": 0.12,
          "areaLineDash": [
            2,
            2,
          ],
          "outerPadding": 4,
          "textBackgroundBorderColor": "#BCC1CB",
          "textBackgroundBorderRadius": 0,
          "textBackgroundBorderWidth": 1,
          "textBackgroundColor": "#BCC1CB",
          "textBackgroundPadding": 2,
          "textBackgroundVisible": true,
          "textColor": "#ffffff",
          "textFontSize": 12,
          "textFontWeight": 400,
        },
        "annotationHorizontalLine": {
          "endSymbolVisible": false,
          "lineColor": "#BCC1CB",
          "lineStyle": "solid",
          "lineVisible": true,
          "lineWidth": 1,
          "startSymbolVisible": true,
          "textBackgroundBorderColor": "#BCC1CB",
          "textBackgroundBorderRadius": 0,
          "textBackgroundBorderWidth": 1,
          "textBackgroundColor": "#BCC1CB",
          "textBackgroundPadding": 2,
          "textBackgroundVisible": true,
          "textColor": "#ffffff",
          "textFontSize": 12,
          "textFontWeight": 400,
        },
        "annotationPoint": {
          "textBackgroundBorderColor": "#BCC1CB",
          "textBackgroundBorderRadius": 0,
          "textBackgroundBorderWidth": 1,
          "textBackgroundColor": "#BCC1CB",
          "textBackgroundPadding": 2,
          "textBackgroundVisible": true,
          "textColor": "#ffffff",
          "textFontSize": 12,
          "textFontWeight": 400,
        },
        "annotationVerticalLine": {
          "endSymbolVisible": false,
          "lineColor": "#BCC1CB",
          "lineStyle": "solid",
          "lineVisible": true,
          "lineWidth": 1,
          "startSymbolVisible": true,
          "textBackgroundBorderColor": "#BCC1CB",
          "textBackgroundBorderRadius": 0,
          "textBackgroundBorderWidth": 1,
          "textBackgroundColor": "#BCC1CB",
          "textBackgroundPadding": 2,
          "textBackgroundVisible": true,
          "textColor": "#ffffff",
          "textFontSize": 12,
          "textFontWeight": 400,
        },
      },
      "backgroundColor": "transparent",
      "color": {
        "colorScheme": [
          "#8D72F6",
          "#5766EC",
          "#66A3FE",
          "#51D5E6",
          "#4EC0B3",
          "#F9DF90",
          "#F9AD71",
          "#ED8888",
          "#E9A0C3",
          "#D77DD3",
        ],
        "linearColorScheme": [
          "#C2CEFF",
          "#5766EC",
        ],
        "negativeColor": "#EB3373",
        "positiveColor": "#7E5DFF",
      },
      "crosshairRect": {
        "labelBackgroundColor": "#364159",
        "labelColor": "#ffffff",
        "labelVisible": true,
        "rectColor": "#3641594d",
        "visible": true,
      },
      "label": {
        "enable": true,
        "labelColorSmartInvert": false,
        "labelOverlap": true,
        "labelStroke": "#fff",
        "showValue": true,
        "showValuePercent": false,
        "wrap": true,
      },
      "legend": {
        "border": false,
        "enable": true,
        "labelColor": "#646A73",
        "labelFontSize": 12,
        "labelFontWeight": 400,
        "maxSize": 2,
        "position": "rt",
        "shapeType": "rectRound",
      },
      "pivotGrid": {
        "axisLabelColor": "#BCC1CB",
        "bodyFontColor": "#141414",
        "borderColor": "#e3e5eb",
        "chartGridColor": "#F0F1F6",
        "frameCornerRadius": 0,
        "headerBackgroundColor": "transparent",
        "headerFontColor": "#21252c",
        "hoverHeaderBackgroundColor": "#D9DDE4",
        "hoverHeaderInlineBackgroundColor": "#D9DDE455",
        "outlineBorderLineWidth": 0,
        "titleFontColor": "#21252c",
        "titleFontSize": 12,
        "titleFontWeight": "bold",
      },
      "stackCornerRadius": [
        4,
        4,
        0,
        0,
      ],
      "tooltip": {
        "backgroundColor": "#fff",
        "borderColor": "#e3e5e8",
        "borderRadius": 12,
        "borderWidth": 1,
        "enable": true,
        "fontSize": 12,
        "keyColor": "#606773",
        "lineHeight": 12,
        "lineSpace": 6,
        "padding": 7,
        "titleColor": "#21252c",
        "valueColor": "#21252c",
      },
      "xAxis": {
        "grid": {
          "gridColor": "#E3E5EB",
          "gridLineDash": [
            4,
            2,
          ],
          "gridWidth": 0.5,
          "visible": false,
        },
        "label": {
          "labelAngle": 0,
          "labelColor": "#8F959E",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "visible": true,
        },
        "labelAutoHide": true,
        "labelAutoHideGap": 4,
        "labelAutoLimit": true,
        "labelAutoLimitLength": 80,
        "labelAutoRotate": false,
        "labelAutoRotateAngleRange": [
          0,
          -45,
          -90,
        ],
        "line": {
          "lineColor": "#21252C",
          "lineWidth": 1,
          "visible": true,
        },
        "tick": {
          "tickColor": "#21252C",
          "tickInside": false,
          "tickSize": 4,
          "visible": false,
        },
        "title": {
          "titleColor": "#606773",
          "titleFontSize": 12,
          "titleFontWeight": 400,
          "titleText": "",
          "visible": false,
        },
      },
      "yAxis": {
        "grid": {
          "gridColor": "#E3E5EB",
          "gridLineDash": [
            4,
            2,
          ],
          "gridWidth": 0.5,
          "visible": true,
        },
        "inverse": false,
        "label": {
          "labelAngle": 0,
          "labelColor": "#8F959E",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "visible": true,
        },
        "line": {
          "lineColor": "#21252C",
          "lineWidth": 1,
          "visible": false,
        },
        "nice": true,
        "tick": {
          "tickColor": "#21252C",
          "tickInside": false,
          "tickSize": 4,
          "visible": false,
        },
        "title": {
          "titleColor": "#606773",
          "titleFontSize": 12,
          "titleFontWeight": 400,
          "titleText": "",
          "visible": false,
        },
        "zero": true,
      },
    },
  },
  "customTheme": {
    "config": {
      "columnParallel": {
        "annotation": {
          "annotationArea": {
            "areaBorderColor": "#BCC1CB",
            "areaBorderRadius": 0,
            "areaBorderWidth": 0,
            "areaColor": "#BCC1CB",
            "areaColorOpacity": 0.12,
            "areaLineDash": [
              2,
              2,
            ],
            "outerPadding": 4,
            "textBackgroundBorderColor": "#BCC1CB",
            "textBackgroundBorderRadius": 0,
            "textBackgroundBorderWidth": 1,
            "textBackgroundColor": "#BCC1CB",
            "textBackgroundPadding": 2,
            "textBackgroundVisible": true,
            "textColor": "#ffffff",
            "textFontSize": 12,
            "textFontWeight": 400,
          },
          "annotationHorizontalLine": {
            "endSymbolVisible": false,
            "lineColor": "#BCC1CB",
            "lineStyle": "solid",
            "lineVisible": true,
            "lineWidth": 1,
            "startSymbolVisible": true,
            "textBackgroundBorderColor": "#BCC1CB",
            "textBackgroundBorderRadius": 0,
            "textBackgroundBorderWidth": 1,
            "textBackgroundColor": "#BCC1CB",
            "textBackgroundPadding": 2,
            "textBackgroundVisible": true,
            "textColor": "#ffffff",
            "textFontSize": 12,
            "textFontWeight": 400,
          },
          "annotationPoint": {
            "textBackgroundBorderColor": "#BCC1CB",
            "textBackgroundBorderRadius": 0,
            "textBackgroundBorderWidth": 1,
            "textBackgroundColor": "#BCC1CB",
            "textBackgroundPadding": 2,
            "textBackgroundVisible": true,
            "textColor": "#ffffff",
            "textFontSize": 12,
            "textFontWeight": 400,
          },
          "annotationVerticalLine": {
            "endSymbolVisible": false,
            "lineColor": "#BCC1CB",
            "lineStyle": "solid",
            "lineVisible": true,
            "lineWidth": 1,
            "startSymbolVisible": true,
            "textBackgroundBorderColor": "#BCC1CB",
            "textBackgroundBorderRadius": 0,
            "textBackgroundBorderWidth": 1,
            "textBackgroundColor": "#BCC1CB",
            "textBackgroundPadding": 2,
            "textBackgroundVisible": true,
            "textColor": "#ffffff",
            "textFontSize": 12,
            "textFontWeight": 400,
          },
        },
        "backgroundColor": "transparent",
        "color": {
          "colorScheme": [
            "#8D72F6",
            "#5766EC",
            "#66A3FE",
            "#51D5E6",
            "#4EC0B3",
            "#F9DF90",
            "#F9AD71",
            "#ED8888",
            "#E9A0C3",
            "#D77DD3",
          ],
          "linearColorScheme": [
            "#C2CEFF",
            "#5766EC",
          ],
          "negativeColor": "#EB3373",
          "positiveColor": "#7E5DFF",
        },
        "crosshairRect": {
          "labelBackgroundColor": "#364159",
          "labelColor": "#ffffff",
          "labelVisible": true,
          "rectColor": "#3641594d",
          "visible": true,
        },
        "label": {
          "enable": true,
          "labelColorSmartInvert": false,
          "labelOverlap": true,
          "labelStroke": "#fff",
          "showValue": true,
          "showValuePercent": false,
          "wrap": true,
        },
        "legend": {
          "border": true,
          "enable": true,
          "labelColor": "#646A73",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "maxSize": 1,
          "position": "rt",
          "shapeType": "rectRound",
        },
        "pivotGrid": {
          "axisLabelColor": "#BCC1CB",
          "bodyFontColor": "#141414",
          "borderColor": "#e3e5eb",
          "chartGridColor": "#F0F1F6",
          "frameCornerRadius": 0,
          "headerBackgroundColor": "transparent",
          "headerFontColor": "#21252c",
          "hoverHeaderBackgroundColor": "#D9DDE4",
          "hoverHeaderInlineBackgroundColor": "#D9DDE455",
          "outlineBorderLineWidth": 0,
          "titleFontColor": "#21252c",
          "titleFontSize": 12,
          "titleFontWeight": "bold",
        },
        "stackCornerRadius": [
          4,
          4,
          0,
          0,
        ],
        "tooltip": {
          "backgroundColor": "#fff",
          "borderColor": "#e3e5e8",
          "borderRadius": 12,
          "borderWidth": 1,
          "enable": true,
          "fontSize": 12,
          "keyColor": "#606773",
          "lineHeight": 12,
          "lineSpace": 6,
          "padding": 7,
          "titleColor": "#21252c",
          "valueColor": "#21252c",
        },
        "xAxis": {
          "grid": {
            "gridColor": "#E3E5EB",
            "gridLineDash": [
              4,
              2,
            ],
            "gridWidth": 0.5,
            "visible": false,
          },
          "label": {
            "labelAngle": 0,
            "labelColor": "#8F959E",
            "labelFontSize": 12,
            "labelFontWeight": 400,
            "visible": true,
          },
          "labelAutoHide": true,
          "labelAutoHideGap": 4,
          "labelAutoLimit": true,
          "labelAutoLimitLength": 80,
          "labelAutoRotate": false,
          "labelAutoRotateAngleRange": [
            0,
            -45,
            -90,
          ],
          "line": {
            "lineColor": "#21252C",
            "lineWidth": 1,
            "visible": true,
          },
          "tick": {
            "tickColor": "#21252C",
            "tickInside": false,
            "tickSize": 4,
            "visible": false,
          },
          "title": {
            "titleColor": "#606773",
            "titleFontSize": 12,
            "titleFontWeight": 400,
            "titleText": "",
            "visible": false,
          },
        },
        "yAxis": {
          "grid": {
            "gridColor": "#E3E5EB",
            "gridLineDash": [
              4,
              2,
            ],
            "gridWidth": 0.5,
            "visible": true,
          },
          "inverse": false,
          "label": {
            "labelAngle": 0,
            "labelColor": "#8F959E",
            "labelFontSize": 12,
            "labelFontWeight": 400,
            "visible": true,
          },
          "line": {
            "lineColor": "#21252C",
            "lineWidth": 1,
            "visible": false,
          },
          "nice": true,
          "tick": {
            "tickColor": "#21252C",
            "tickInside": false,
            "tickSize": 4,
            "visible": false,
          },
          "title": {
            "titleColor": "#606773",
            "titleFontSize": 12,
            "titleFontWeight": 400,
            "titleText": "",
            "visible": false,
          },
          "zero": true,
        },
      },
    },
  },
  "dataset": [
    {
      "__Dim_ColorId__": "east-A-profit",
      "__Dim_Color__": "east-A-profit",
      "__Dim_Detail__": "east-A-profit",
      "__Dim_X__": "2019",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 1,
      "__OriginalData__": {
        "city": "A",
        "date": "2019",
        "discount": 0.5,
        "profit": 1,
        "region": "east",
        "sales": 2,
      },
      "city": "A",
      "date": "2019",
      "profit": 1,
      "region": "east",
    },
    {
      "__Dim_ColorId__": "east-A-sales",
      "__Dim_Color__": "east-A-sales",
      "__Dim_Detail__": "east-A-sales",
      "__Dim_X__": "2019",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 2,
      "__OriginalData__": {
        "city": "A",
        "date": "2019",
        "discount": 0.5,
        "profit": 1,
        "region": "east",
        "sales": 2,
      },
      "city": "A",
      "date": "2019",
      "region": "east",
      "sales": 2,
    },
    {
      "__Dim_ColorId__": "east-A-discount",
      "__Dim_Color__": "east-A-discount",
      "__Dim_Detail__": "east-A-discount",
      "__Dim_X__": "2019",
      "__MeaId__": "discount",
      "__MeaName__": "discount",
      "__MeaValue__": 0.5,
      "__OriginalData__": {
        "city": "A",
        "date": "2019",
        "discount": 0.5,
        "profit": 1,
        "region": "east",
        "sales": 2,
      },
      "city": "A",
      "date": "2019",
      "discount": 0.5,
      "region": "east",
    },
    {
      "__Dim_ColorId__": "east-B-profit",
      "__Dim_Color__": "east-B-profit",
      "__Dim_Detail__": "east-B-profit",
      "__Dim_X__": "2019",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 3,
      "__OriginalData__": {
        "city": "B",
        "date": "2019",
        "discount": 0.5,
        "profit": 3,
        "region": "east",
        "sales": 6,
      },
      "city": "B",
      "date": "2019",
      "profit": 3,
      "region": "east",
    },
    {
      "__Dim_ColorId__": "east-B-sales",
      "__Dim_Color__": "east-B-sales",
      "__Dim_Detail__": "east-B-sales",
      "__Dim_X__": "2019",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 6,
      "__OriginalData__": {
        "city": "B",
        "date": "2019",
        "discount": 0.5,
        "profit": 3,
        "region": "east",
        "sales": 6,
      },
      "city": "B",
      "date": "2019",
      "region": "east",
      "sales": 6,
    },
    {
      "__Dim_ColorId__": "east-B-discount",
      "__Dim_Color__": "east-B-discount",
      "__Dim_Detail__": "east-B-discount",
      "__Dim_X__": "2019",
      "__MeaId__": "discount",
      "__MeaName__": "discount",
      "__MeaValue__": 0.5,
      "__OriginalData__": {
        "city": "B",
        "date": "2019",
        "discount": 0.5,
        "profit": 3,
        "region": "east",
        "sales": 6,
      },
      "city": "B",
      "date": "2019",
      "discount": 0.5,
      "region": "east",
    },
    {
      "__Dim_ColorId__": "east-C-profit",
      "__Dim_Color__": "east-C-profit",
      "__Dim_Detail__": "east-C-profit",
      "__Dim_X__": "2019",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 3,
      "__OriginalData__": {
        "city": "C",
        "date": "2019",
        "discount": 0.5,
        "profit": 3,
        "region": "east",
        "sales": 6,
      },
      "city": "C",
      "date": "2019",
      "profit": 3,
      "region": "east",
    },
    {
      "__Dim_ColorId__": "east-C-sales",
      "__Dim_Color__": "east-C-sales",
      "__Dim_Detail__": "east-C-sales",
      "__Dim_X__": "2019",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 6,
      "__OriginalData__": {
        "city": "C",
        "date": "2019",
        "discount": 0.5,
        "profit": 3,
        "region": "east",
        "sales": 6,
      },
      "city": "C",
      "date": "2019",
      "region": "east",
      "sales": 6,
    },
    {
      "__Dim_ColorId__": "east-C-discount",
      "__Dim_Color__": "east-C-discount",
      "__Dim_Detail__": "east-C-discount",
      "__Dim_X__": "2019",
      "__MeaId__": "discount",
      "__MeaName__": "discount",
      "__MeaValue__": 0.5,
      "__OriginalData__": {
        "city": "C",
        "date": "2019",
        "discount": 0.5,
        "profit": 3,
        "region": "east",
        "sales": 6,
      },
      "city": "C",
      "date": "2019",
      "discount": 0.5,
      "region": "east",
    },
    {
      "__Dim_ColorId__": "east-D-profit",
      "__Dim_Color__": "east-D-profit",
      "__Dim_Detail__": "east-D-profit",
      "__Dim_X__": "2019",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 5,
      "__OriginalData__": {
        "city": "D",
        "date": "2019",
        "discount": 0.5,
        "profit": 5,
        "region": "east",
        "sales": 10,
      },
      "city": "D",
      "date": "2019",
      "profit": 5,
      "region": "east",
    },
    {
      "__Dim_ColorId__": "east-D-sales",
      "__Dim_Color__": "east-D-sales",
      "__Dim_Detail__": "east-D-sales",
      "__Dim_X__": "2019",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 10,
      "__OriginalData__": {
        "city": "D",
        "date": "2019",
        "discount": 0.5,
        "profit": 5,
        "region": "east",
        "sales": 10,
      },
      "city": "D",
      "date": "2019",
      "region": "east",
      "sales": 10,
    },
    {
      "__Dim_ColorId__": "east-D-discount",
      "__Dim_Color__": "east-D-discount",
      "__Dim_Detail__": "east-D-discount",
      "__Dim_X__": "2019",
      "__MeaId__": "discount",
      "__MeaName__": "discount",
      "__MeaValue__": 0.5,
      "__OriginalData__": {
        "city": "D",
        "date": "2019",
        "discount": 0.5,
        "profit": 5,
        "region": "east",
        "sales": 10,
      },
      "city": "D",
      "date": "2019",
      "discount": 0.5,
      "region": "east",
    },
    {
      "__Dim_ColorId__": "east-E-profit",
      "__Dim_Color__": "east-E-profit",
      "__Dim_Detail__": "east-E-profit",
      "__Dim_X__": "2019",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 4,
      "__OriginalData__": {
        "city": "E",
        "date": "2019",
        "discount": 0.5,
        "profit": 4,
        "region": "east",
        "sales": 8,
      },
      "city": "E",
      "date": "2019",
      "profit": 4,
      "region": "east",
    },
    {
      "__Dim_ColorId__": "east-E-sales",
      "__Dim_Color__": "east-E-sales",
      "__Dim_Detail__": "east-E-sales",
      "__Dim_X__": "2019",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 8,
      "__OriginalData__": {
        "city": "E",
        "date": "2019",
        "discount": 0.5,
        "profit": 4,
        "region": "east",
        "sales": 8,
      },
      "city": "E",
      "date": "2019",
      "region": "east",
      "sales": 8,
    },
    {
      "__Dim_ColorId__": "east-E-discount",
      "__Dim_Color__": "east-E-discount",
      "__Dim_Detail__": "east-E-discount",
      "__Dim_X__": "2019",
      "__MeaId__": "discount",
      "__MeaName__": "discount",
      "__MeaValue__": 0.5,
      "__OriginalData__": {
        "city": "E",
        "date": "2019",
        "discount": 0.5,
        "profit": 4,
        "region": "east",
        "sales": 8,
      },
      "city": "E",
      "date": "2019",
      "discount": 0.5,
      "region": "east",
    },
    {
      "__Dim_ColorId__": "north of east-A-profit",
      "__Dim_Color__": "north of east-A-profit",
      "__Dim_Detail__": "north of east-A-profit",
      "__Dim_X__": "2020",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 1,
      "__OriginalData__": {
        "city": "A",
        "date": "2020",
        "discount": 0.5,
        "profit": 1,
        "region": "north of east",
        "sales": 2,
      },
      "city": "A",
      "date": "2020",
      "profit": 1,
      "region": "north of east",
    },
    {
      "__Dim_ColorId__": "north of east-A-sales",
      "__Dim_Color__": "north of east-A-sales",
      "__Dim_Detail__": "north of east-A-sales",
      "__Dim_X__": "2020",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 2,
      "__OriginalData__": {
        "city": "A",
        "date": "2020",
        "discount": 0.5,
        "profit": 1,
        "region": "north of east",
        "sales": 2,
      },
      "city": "A",
      "date": "2020",
      "region": "north of east",
      "sales": 2,
    },
    {
      "__Dim_ColorId__": "north of east-A-discount",
      "__Dim_Color__": "north of east-A-discount",
      "__Dim_Detail__": "north of east-A-discount",
      "__Dim_X__": "2020",
      "__MeaId__": "discount",
      "__MeaName__": "discount",
      "__MeaValue__": 0.5,
      "__OriginalData__": {
        "city": "A",
        "date": "2020",
        "discount": 0.5,
        "profit": 1,
        "region": "north of east",
        "sales": 2,
      },
      "city": "A",
      "date": "2020",
      "discount": 0.5,
      "region": "north of east",
    },
    {
      "__Dim_ColorId__": "north of east-B-profit",
      "__Dim_Color__": "north of east-B-profit",
      "__Dim_Detail__": "north of east-B-profit",
      "__Dim_X__": "2020",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 3,
      "__OriginalData__": {
        "city": "B",
        "date": "2020",
        "discount": 0.5,
        "profit": 3,
        "region": "north of east",
        "sales": 6,
      },
      "city": "B",
      "date": "2020",
      "profit": 3,
      "region": "north of east",
    },
    {
      "__Dim_ColorId__": "north of east-B-sales",
      "__Dim_Color__": "north of east-B-sales",
      "__Dim_Detail__": "north of east-B-sales",
      "__Dim_X__": "2020",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 6,
      "__OriginalData__": {
        "city": "B",
        "date": "2020",
        "discount": 0.5,
        "profit": 3,
        "region": "north of east",
        "sales": 6,
      },
      "city": "B",
      "date": "2020",
      "region": "north of east",
      "sales": 6,
    },
    {
      "__Dim_ColorId__": "north of east-B-discount",
      "__Dim_Color__": "north of east-B-discount",
      "__Dim_Detail__": "north of east-B-discount",
      "__Dim_X__": "2020",
      "__MeaId__": "discount",
      "__MeaName__": "discount",
      "__MeaValue__": 0.5,
      "__OriginalData__": {
        "city": "B",
        "date": "2020",
        "discount": 0.5,
        "profit": 3,
        "region": "north of east",
        "sales": 6,
      },
      "city": "B",
      "date": "2020",
      "discount": 0.5,
      "region": "north of east",
    },
    {
      "__Dim_ColorId__": "north of east-C-profit",
      "__Dim_Color__": "north of east-C-profit",
      "__Dim_Detail__": "north of east-C-profit",
      "__Dim_X__": "2020",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 3,
      "__OriginalData__": {
        "city": "C",
        "date": "2020",
        "discount": 0.5,
        "profit": 3,
        "region": "north of east",
        "sales": 6,
      },
      "city": "C",
      "date": "2020",
      "profit": 3,
      "region": "north of east",
    },
    {
      "__Dim_ColorId__": "north of east-C-sales",
      "__Dim_Color__": "north of east-C-sales",
      "__Dim_Detail__": "north of east-C-sales",
      "__Dim_X__": "2020",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 6,
      "__OriginalData__": {
        "city": "C",
        "date": "2020",
        "discount": 0.5,
        "profit": 3,
        "region": "north of east",
        "sales": 6,
      },
      "city": "C",
      "date": "2020",
      "region": "north of east",
      "sales": 6,
    },
    {
      "__Dim_ColorId__": "north of east-C-discount",
      "__Dim_Color__": "north of east-C-discount",
      "__Dim_Detail__": "north of east-C-discount",
      "__Dim_X__": "2020",
      "__MeaId__": "discount",
      "__MeaName__": "discount",
      "__MeaValue__": 0.5,
      "__OriginalData__": {
        "city": "C",
        "date": "2020",
        "discount": 0.5,
        "profit": 3,
        "region": "north of east",
        "sales": 6,
      },
      "city": "C",
      "date": "2020",
      "discount": 0.5,
      "region": "north of east",
    },
    {
      "__Dim_ColorId__": "north of east-D-profit",
      "__Dim_Color__": "north of east-D-profit",
      "__Dim_Detail__": "north of east-D-profit",
      "__Dim_X__": "2020",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 5,
      "__OriginalData__": {
        "city": "D",
        "date": "2020",
        "discount": 0.5,
        "profit": 5,
        "region": "north of east",
        "sales": 10,
      },
      "city": "D",
      "date": "2020",
      "profit": 5,
      "region": "north of east",
    },
    {
      "__Dim_ColorId__": "north of east-D-sales",
      "__Dim_Color__": "north of east-D-sales",
      "__Dim_Detail__": "north of east-D-sales",
      "__Dim_X__": "2020",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 10,
      "__OriginalData__": {
        "city": "D",
        "date": "2020",
        "discount": 0.5,
        "profit": 5,
        "region": "north of east",
        "sales": 10,
      },
      "city": "D",
      "date": "2020",
      "region": "north of east",
      "sales": 10,
    },
    {
      "__Dim_ColorId__": "north of east-D-discount",
      "__Dim_Color__": "north of east-D-discount",
      "__Dim_Detail__": "north of east-D-discount",
      "__Dim_X__": "2020",
      "__MeaId__": "discount",
      "__MeaName__": "discount",
      "__MeaValue__": 0.5,
      "__OriginalData__": {
        "city": "D",
        "date": "2020",
        "discount": 0.5,
        "profit": 5,
        "region": "north of east",
        "sales": 10,
      },
      "city": "D",
      "date": "2020",
      "discount": 0.5,
      "region": "north of east",
    },
    {
      "__Dim_ColorId__": "north of east-E-profit",
      "__Dim_Color__": "north of east-E-profit",
      "__Dim_Detail__": "north of east-E-profit",
      "__Dim_X__": "2020",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 4,
      "__OriginalData__": {
        "city": "E",
        "date": "2020",
        "discount": 0.5,
        "profit": 4,
        "region": "north of east",
        "sales": 8,
      },
      "city": "E",
      "date": "2020",
      "profit": 4,
      "region": "north of east",
    },
    {
      "__Dim_ColorId__": "north of east-E-sales",
      "__Dim_Color__": "north of east-E-sales",
      "__Dim_Detail__": "north of east-E-sales",
      "__Dim_X__": "2020",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 8,
      "__OriginalData__": {
        "city": "E",
        "date": "2020",
        "discount": 0.5,
        "profit": 4,
        "region": "north of east",
        "sales": 8,
      },
      "city": "E",
      "date": "2020",
      "region": "north of east",
      "sales": 8,
    },
    {
      "__Dim_ColorId__": "north of east-E-discount",
      "__Dim_Color__": "north of east-E-discount",
      "__Dim_Detail__": "north of east-E-discount",
      "__Dim_X__": "2020",
      "__MeaId__": "discount",
      "__MeaName__": "discount",
      "__MeaValue__": 0.5,
      "__OriginalData__": {
        "city": "E",
        "date": "2020",
        "discount": 0.5,
        "profit": 4,
        "region": "north of east",
        "sales": 8,
      },
      "city": "E",
      "date": "2020",
      "discount": 0.5,
      "region": "north of east",
    },
  ],
  "datasetReshapeInfo": [
    {
      "foldInfo": {
        "foldMap": {
          "discount": "discount",
          "profit": "profit",
          "sales": "sales",
        },
        "measureId": "__MeaId__",
        "measureName": "__MeaName__",
        "measureValue": "__MeaValue__",
        "statistics": {
          "colorMax": -Infinity,
          "colorMin": Infinity,
          "count": 30,
          "max": 10,
          "min": 0.5,
          "sum": 101,
        },
      },
      "id": "columnParallel",
      "index": 0,
      "unfoldInfo": {
        "colorIdMap": {
          "east-A-discount": {
            "alias": "east-A-discount",
            "id": "east-A-discount",
          },
          "east-A-profit": {
            "alias": "east-A-profit",
            "id": "east-A-profit",
          },
          "east-A-sales": {
            "alias": "east-A-sales",
            "id": "east-A-sales",
          },
          "east-B-discount": {
            "alias": "east-B-discount",
            "id": "east-B-discount",
          },
          "east-B-profit": {
            "alias": "east-B-profit",
            "id": "east-B-profit",
          },
          "east-B-sales": {
            "alias": "east-B-sales",
            "id": "east-B-sales",
          },
          "east-C-discount": {
            "alias": "east-C-discount",
            "id": "east-C-discount",
          },
          "east-C-profit": {
            "alias": "east-C-profit",
            "id": "east-C-profit",
          },
          "east-C-sales": {
            "alias": "east-C-sales",
            "id": "east-C-sales",
          },
          "east-D-discount": {
            "alias": "east-D-discount",
            "id": "east-D-discount",
          },
          "east-D-profit": {
            "alias": "east-D-profit",
            "id": "east-D-profit",
          },
          "east-D-sales": {
            "alias": "east-D-sales",
            "id": "east-D-sales",
          },
          "east-E-discount": {
            "alias": "east-E-discount",
            "id": "east-E-discount",
          },
          "east-E-profit": {
            "alias": "east-E-profit",
            "id": "east-E-profit",
          },
          "east-E-sales": {
            "alias": "east-E-sales",
            "id": "east-E-sales",
          },
          "north of east-A-discount": {
            "alias": "north of east-A-discount",
            "id": "north of east-A-discount",
          },
          "north of east-A-profit": {
            "alias": "north of east-A-profit",
            "id": "north of east-A-profit",
          },
          "north of east-A-sales": {
            "alias": "north of east-A-sales",
            "id": "north of east-A-sales",
          },
          "north of east-B-discount": {
            "alias": "north of east-B-discount",
            "id": "north of east-B-discount",
          },
          "north of east-B-profit": {
            "alias": "north of east-B-profit",
            "id": "north of east-B-profit",
          },
          "north of east-B-sales": {
            "alias": "north of east-B-sales",
            "id": "north of east-B-sales",
          },
          "north of east-C-discount": {
            "alias": "north of east-C-discount",
            "id": "north of east-C-discount",
          },
          "north of east-C-profit": {
            "alias": "north of east-C-profit",
            "id": "north of east-C-profit",
          },
          "north of east-C-sales": {
            "alias": "north of east-C-sales",
            "id": "north of east-C-sales",
          },
          "north of east-D-discount": {
            "alias": "north of east-D-discount",
            "id": "north of east-D-discount",
          },
          "north of east-D-profit": {
            "alias": "north of east-D-profit",
            "id": "north of east-D-profit",
          },
          "north of east-D-sales": {
            "alias": "north of east-D-sales",
            "id": "north of east-D-sales",
          },
          "north of east-E-discount": {
            "alias": "north of east-E-discount",
            "id": "north of east-E-discount",
          },
          "north of east-E-profit": {
            "alias": "north of east-E-profit",
            "id": "north of east-E-profit",
          },
          "north of east-E-sales": {
            "alias": "north of east-E-sales",
            "id": "north of east-E-sales",
          },
        },
        "colorItems": [
          "east-A-profit",
          "east-A-sales",
          "east-A-discount",
          "east-B-profit",
          "east-B-sales",
          "east-B-discount",
          "east-C-profit",
          "east-C-sales",
          "east-C-discount",
          "east-D-profit",
          "east-D-sales",
          "east-D-discount",
          "east-E-profit",
          "east-E-sales",
          "east-E-discount",
          "north of east-A-profit",
          "north of east-A-sales",
          "north of east-A-discount",
          "north of east-B-profit",
          "north of east-B-sales",
          "north of east-B-discount",
          "north of east-C-profit",
          "north of east-C-sales",
          "north of east-C-discount",
          "north of east-D-profit",
          "north of east-D-sales",
          "north of east-D-discount",
          "north of east-E-profit",
          "north of east-E-sales",
          "north of east-E-discount",
        ],
        "encodingAngle": "__Dim_Angle__",
        "encodingColor": "__Dim_Color__",
        "encodingColorId": "__Dim_ColorId__",
        "encodingDetail": "__Dim_Detail__",
        "encodingX": "__Dim_X__",
        "encodingY": "__Dim_Y__",
      },
    },
  ],
  "dimensions": [
    {
      "alias": "date",
      "id": "date",
    },
    {
      "alias": "region",
      "id": "region",
    },
    {
      "alias": "city",
      "id": "city",
    },
    {
      "alias": "指标Id",
      "id": "__MeaId__",
    },
  ],
  "encoding": {
    "color": [
      "region",
      "city",
      "__MeaId__",
    ],
    "column": [],
    "detail": [
      "region",
      "city",
      "__MeaId__",
    ],
    "label": [],
    "row": [],
    "tooltip": [
      "date",
      "region",
      "city",
    ],
    "x": [
      "date",
    ],
    "y": [
      "profit",
      "sales",
      "discount",
    ],
  },
  "locale": "zh-CN",
  "markStyle": {},
  "measures": [
    {
      "alias": "profit",
      "id": "profit",
    },
    {
      "alias": "sales",
      "id": "sales",
    },
    {
      "alias": "discount",
      "id": "discount",
    },
  ],
}
`;

exports[`border 2`] = `
{
  "animation": true,
  "axes": [
    {
      "domainLine": {
        "style": {
          "lineWidth": 1,
          "stroke": "#21252C",
        },
        "visible": true,
      },
      "grid": {
        "style": {
          "lineDash": [
            4,
            2,
          ],
          "lineWidth": 0.5,
          "stroke": "#E3E5EB",
        },
        "visible": false,
      },
      "hover": true,
      "label": {
        "autoHide": true,
        "autoHideMethod": "greedy",
        "autoHideSeparation": 4,
        "autoLimit": true,
        "autoRotate": false,
        "autoRotateAngle": [
          0,
          -45,
          -90,
        ],
        "flush": true,
        "lastVisible": true,
        "minGap": 4,
        "space": 8,
        "style": {
          "angle": 0,
          "fill": "#8F959E",
          "fontSize": 12,
          "fontWeight": 400,
          "maxLineWidth": 80,
        },
        "visible": true,
      },
      "maxHeight": 140,
      "orient": "bottom",
      "paddingInner": [
        0.15,
        0.1,
      ],
      "paddingOuter": [
        0.075,
        0.1,
      ],
      "sampling": false,
      "tick": {
        "inside": false,
        "style": {
          "stroke": "#21252C",
        },
        "tickSize": 4,
        "visible": false,
      },
      "title": {
        "style": {
          "fill": "#606773",
          "fontSize": 12,
          "fontWeight": 400,
        },
        "text": "date",
        "visible": false,
      },
      "type": "band",
      "visible": true,
    },
    {
      "base": 10,
      "domainLine": {
        "style": {
          "lineWidth": 1,
          "stroke": "#21252C",
        },
        "visible": false,
      },
      "grid": {
        "style": {
          "lineDash": [
            4,
            2,
          ],
          "lineWidth": 0.5,
          "stroke": "#E3E5EB",
        },
        "visible": true,
      },
      "innerOffset": {
        "top": 12,
      },
      "inverse": false,
      "label": {
        "formatMethod": [Function],
        "space": 8,
        "style": {
          "angle": 0,
          "fill": "#8F959E",
          "fontSize": 12,
          "fontWeight": 400,
        },
        "visible": true,
      },
      "max": undefined,
      "min": undefined,
      "nice": true,
      "orient": "left",
      "tick": {
        "inside": false,
        "style": {
          "stroke": "#21252C",
        },
        "tickSize": 4,
        "visible": false,
      },
      "title": {
        "style": {
          "fill": "#606773",
          "fontSize": 12,
          "fontWeight": 400,
        },
        "text": "profit & sales & discount",
        "visible": false,
      },
      "type": "linear",
      "visible": true,
      "zero": true,
    },
  ],
  "background": "transparent",
  "bar": {
    "state": {
      "hover": {
        "fillOpacity": 0.6,
      },
    },
    "style": {
      "fillOpacity": 1,
      "lineWidth": 1,
      "visible": true,
    },
  },
  "color": {
    "domain": [
      "east-A-profit",
      "east-A-sales",
      "east-A-discount",
      "east-B-profit",
      "east-B-sales",
      "east-B-discount",
      "east-C-profit",
      "east-C-sales",
      "east-C-discount",
      "east-D-profit",
      "east-D-sales",
      "east-D-discount",
      "east-E-profit",
      "east-E-sales",
      "east-E-discount",
      "north of east-A-profit",
      "north of east-A-sales",
      "north of east-A-discount",
      "north of east-B-profit",
      "north of east-B-sales",
      "north of east-B-discount",
      "north of east-C-profit",
      "north of east-C-sales",
      "north of east-C-discount",
      "north of east-D-profit",
      "north of east-D-sales",
      "north of east-D-discount",
      "north of east-E-profit",
      "north of east-E-sales",
      "north of east-E-discount",
    ],
    "range": [
      "#8D72F6",
      "#5766EC",
      "#66A3FE",
      "#51D5E6",
      "#4EC0B3",
      "#F9DF90",
      "#F9AD71",
      "#ED8888",
      "#E9A0C3",
      "#D77DD3",
    ],
    "specified": undefined,
    "type": "ordinal",
  },
  "crosshair": {
    "xField": {
      "label": {
        "labelBackground": {
          "style": {
            "fill": "#364159",
          },
          "visible": true,
        },
        "style": {
          "fill": "#ffffff",
        },
        "visible": true,
      },
      "line": {
        "style": {
          "fill": "#3641594d",
          "lineWidth": 0,
          "opacity": 0.2,
        },
        "type": "rect",
      },
      "visible": true,
    },
  },
  "data": {
    "fields": {
      "__Dim_Angle__": {
        "sortIndex": 0,
      },
      "__Dim_ColorId__": {
        "sortIndex": 0,
      },
      "__Dim_X__": {
        "sortIndex": 0,
      },
    },
    "id": "columnParallel",
    "values": [
      {
        "__Dim_ColorId__": "east-A-profit",
        "__Dim_Color__": "east-A-profit",
        "__Dim_Detail__": "east-A-profit",
        "__Dim_X__": "2019",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 1,
        "__OriginalData__": {
          "city": "A",
          "date": "2019",
          "discount": 0.5,
          "profit": 1,
          "region": "east",
          "sales": 2,
        },
        "city": "A",
        "date": "2019",
        "profit": 1,
        "region": "east",
      },
      {
        "__Dim_ColorId__": "east-A-sales",
        "__Dim_Color__": "east-A-sales",
        "__Dim_Detail__": "east-A-sales",
        "__Dim_X__": "2019",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 2,
        "__OriginalData__": {
          "city": "A",
          "date": "2019",
          "discount": 0.5,
          "profit": 1,
          "region": "east",
          "sales": 2,
        },
        "city": "A",
        "date": "2019",
        "region": "east",
        "sales": 2,
      },
      {
        "__Dim_ColorId__": "east-A-discount",
        "__Dim_Color__": "east-A-discount",
        "__Dim_Detail__": "east-A-discount",
        "__Dim_X__": "2019",
        "__MeaId__": "discount",
        "__MeaName__": "discount",
        "__MeaValue__": 0.5,
        "__OriginalData__": {
          "city": "A",
          "date": "2019",
          "discount": 0.5,
          "profit": 1,
          "region": "east",
          "sales": 2,
        },
        "city": "A",
        "date": "2019",
        "discount": 0.5,
        "region": "east",
      },
      {
        "__Dim_ColorId__": "east-B-profit",
        "__Dim_Color__": "east-B-profit",
        "__Dim_Detail__": "east-B-profit",
        "__Dim_X__": "2019",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 3,
        "__OriginalData__": {
          "city": "B",
          "date": "2019",
          "discount": 0.5,
          "profit": 3,
          "region": "east",
          "sales": 6,
        },
        "city": "B",
        "date": "2019",
        "profit": 3,
        "region": "east",
      },
      {
        "__Dim_ColorId__": "east-B-sales",
        "__Dim_Color__": "east-B-sales",
        "__Dim_Detail__": "east-B-sales",
        "__Dim_X__": "2019",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 6,
        "__OriginalData__": {
          "city": "B",
          "date": "2019",
          "discount": 0.5,
          "profit": 3,
          "region": "east",
          "sales": 6,
        },
        "city": "B",
        "date": "2019",
        "region": "east",
        "sales": 6,
      },
      {
        "__Dim_ColorId__": "east-B-discount",
        "__Dim_Color__": "east-B-discount",
        "__Dim_Detail__": "east-B-discount",
        "__Dim_X__": "2019",
        "__MeaId__": "discount",
        "__MeaName__": "discount",
        "__MeaValue__": 0.5,
        "__OriginalData__": {
          "city": "B",
          "date": "2019",
          "discount": 0.5,
          "profit": 3,
          "region": "east",
          "sales": 6,
        },
        "city": "B",
        "date": "2019",
        "discount": 0.5,
        "region": "east",
      },
      {
        "__Dim_ColorId__": "east-C-profit",
        "__Dim_Color__": "east-C-profit",
        "__Dim_Detail__": "east-C-profit",
        "__Dim_X__": "2019",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 3,
        "__OriginalData__": {
          "city": "C",
          "date": "2019",
          "discount": 0.5,
          "profit": 3,
          "region": "east",
          "sales": 6,
        },
        "city": "C",
        "date": "2019",
        "profit": 3,
        "region": "east",
      },
      {
        "__Dim_ColorId__": "east-C-sales",
        "__Dim_Color__": "east-C-sales",
        "__Dim_Detail__": "east-C-sales",
        "__Dim_X__": "2019",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 6,
        "__OriginalData__": {
          "city": "C",
          "date": "2019",
          "discount": 0.5,
          "profit": 3,
          "region": "east",
          "sales": 6,
        },
        "city": "C",
        "date": "2019",
        "region": "east",
        "sales": 6,
      },
      {
        "__Dim_ColorId__": "east-C-discount",
        "__Dim_Color__": "east-C-discount",
        "__Dim_Detail__": "east-C-discount",
        "__Dim_X__": "2019",
        "__MeaId__": "discount",
        "__MeaName__": "discount",
        "__MeaValue__": 0.5,
        "__OriginalData__": {
          "city": "C",
          "date": "2019",
          "discount": 0.5,
          "profit": 3,
          "region": "east",
          "sales": 6,
        },
        "city": "C",
        "date": "2019",
        "discount": 0.5,
        "region": "east",
      },
      {
        "__Dim_ColorId__": "east-D-profit",
        "__Dim_Color__": "east-D-profit",
        "__Dim_Detail__": "east-D-profit",
        "__Dim_X__": "2019",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 5,
        "__OriginalData__": {
          "city": "D",
          "date": "2019",
          "discount": 0.5,
          "profit": 5,
          "region": "east",
          "sales": 10,
        },
        "city": "D",
        "date": "2019",
        "profit": 5,
        "region": "east",
      },
      {
        "__Dim_ColorId__": "east-D-sales",
        "__Dim_Color__": "east-D-sales",
        "__Dim_Detail__": "east-D-sales",
        "__Dim_X__": "2019",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 10,
        "__OriginalData__": {
          "city": "D",
          "date": "2019",
          "discount": 0.5,
          "profit": 5,
          "region": "east",
          "sales": 10,
        },
        "city": "D",
        "date": "2019",
        "region": "east",
        "sales": 10,
      },
      {
        "__Dim_ColorId__": "east-D-discount",
        "__Dim_Color__": "east-D-discount",
        "__Dim_Detail__": "east-D-discount",
        "__Dim_X__": "2019",
        "__MeaId__": "discount",
        "__MeaName__": "discount",
        "__MeaValue__": 0.5,
        "__OriginalData__": {
          "city": "D",
          "date": "2019",
          "discount": 0.5,
          "profit": 5,
          "region": "east",
          "sales": 10,
        },
        "city": "D",
        "date": "2019",
        "discount": 0.5,
        "region": "east",
      },
      {
        "__Dim_ColorId__": "east-E-profit",
        "__Dim_Color__": "east-E-profit",
        "__Dim_Detail__": "east-E-profit",
        "__Dim_X__": "2019",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 4,
        "__OriginalData__": {
          "city": "E",
          "date": "2019",
          "discount": 0.5,
          "profit": 4,
          "region": "east",
          "sales": 8,
        },
        "city": "E",
        "date": "2019",
        "profit": 4,
        "region": "east",
      },
      {
        "__Dim_ColorId__": "east-E-sales",
        "__Dim_Color__": "east-E-sales",
        "__Dim_Detail__": "east-E-sales",
        "__Dim_X__": "2019",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 8,
        "__OriginalData__": {
          "city": "E",
          "date": "2019",
          "discount": 0.5,
          "profit": 4,
          "region": "east",
          "sales": 8,
        },
        "city": "E",
        "date": "2019",
        "region": "east",
        "sales": 8,
      },
      {
        "__Dim_ColorId__": "east-E-discount",
        "__Dim_Color__": "east-E-discount",
        "__Dim_Detail__": "east-E-discount",
        "__Dim_X__": "2019",
        "__MeaId__": "discount",
        "__MeaName__": "discount",
        "__MeaValue__": 0.5,
        "__OriginalData__": {
          "city": "E",
          "date": "2019",
          "discount": 0.5,
          "profit": 4,
          "region": "east",
          "sales": 8,
        },
        "city": "E",
        "date": "2019",
        "discount": 0.5,
        "region": "east",
      },
      {
        "__Dim_ColorId__": "north of east-A-profit",
        "__Dim_Color__": "north of east-A-profit",
        "__Dim_Detail__": "north of east-A-profit",
        "__Dim_X__": "2020",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 1,
        "__OriginalData__": {
          "city": "A",
          "date": "2020",
          "discount": 0.5,
          "profit": 1,
          "region": "north of east",
          "sales": 2,
        },
        "city": "A",
        "date": "2020",
        "profit": 1,
        "region": "north of east",
      },
      {
        "__Dim_ColorId__": "north of east-A-sales",
        "__Dim_Color__": "north of east-A-sales",
        "__Dim_Detail__": "north of east-A-sales",
        "__Dim_X__": "2020",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 2,
        "__OriginalData__": {
          "city": "A",
          "date": "2020",
          "discount": 0.5,
          "profit": 1,
          "region": "north of east",
          "sales": 2,
        },
        "city": "A",
        "date": "2020",
        "region": "north of east",
        "sales": 2,
      },
      {
        "__Dim_ColorId__": "north of east-A-discount",
        "__Dim_Color__": "north of east-A-discount",
        "__Dim_Detail__": "north of east-A-discount",
        "__Dim_X__": "2020",
        "__MeaId__": "discount",
        "__MeaName__": "discount",
        "__MeaValue__": 0.5,
        "__OriginalData__": {
          "city": "A",
          "date": "2020",
          "discount": 0.5,
          "profit": 1,
          "region": "north of east",
          "sales": 2,
        },
        "city": "A",
        "date": "2020",
        "discount": 0.5,
        "region": "north of east",
      },
      {
        "__Dim_ColorId__": "north of east-B-profit",
        "__Dim_Color__": "north of east-B-profit",
        "__Dim_Detail__": "north of east-B-profit",
        "__Dim_X__": "2020",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 3,
        "__OriginalData__": {
          "city": "B",
          "date": "2020",
          "discount": 0.5,
          "profit": 3,
          "region": "north of east",
          "sales": 6,
        },
        "city": "B",
        "date": "2020",
        "profit": 3,
        "region": "north of east",
      },
      {
        "__Dim_ColorId__": "north of east-B-sales",
        "__Dim_Color__": "north of east-B-sales",
        "__Dim_Detail__": "north of east-B-sales",
        "__Dim_X__": "2020",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 6,
        "__OriginalData__": {
          "city": "B",
          "date": "2020",
          "discount": 0.5,
          "profit": 3,
          "region": "north of east",
          "sales": 6,
        },
        "city": "B",
        "date": "2020",
        "region": "north of east",
        "sales": 6,
      },
      {
        "__Dim_ColorId__": "north of east-B-discount",
        "__Dim_Color__": "north of east-B-discount",
        "__Dim_Detail__": "north of east-B-discount",
        "__Dim_X__": "2020",
        "__MeaId__": "discount",
        "__MeaName__": "discount",
        "__MeaValue__": 0.5,
        "__OriginalData__": {
          "city": "B",
          "date": "2020",
          "discount": 0.5,
          "profit": 3,
          "region": "north of east",
          "sales": 6,
        },
        "city": "B",
        "date": "2020",
        "discount": 0.5,
        "region": "north of east",
      },
      {
        "__Dim_ColorId__": "north of east-C-profit",
        "__Dim_Color__": "north of east-C-profit",
        "__Dim_Detail__": "north of east-C-profit",
        "__Dim_X__": "2020",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 3,
        "__OriginalData__": {
          "city": "C",
          "date": "2020",
          "discount": 0.5,
          "profit": 3,
          "region": "north of east",
          "sales": 6,
        },
        "city": "C",
        "date": "2020",
        "profit": 3,
        "region": "north of east",
      },
      {
        "__Dim_ColorId__": "north of east-C-sales",
        "__Dim_Color__": "north of east-C-sales",
        "__Dim_Detail__": "north of east-C-sales",
        "__Dim_X__": "2020",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 6,
        "__OriginalData__": {
          "city": "C",
          "date": "2020",
          "discount": 0.5,
          "profit": 3,
          "region": "north of east",
          "sales": 6,
        },
        "city": "C",
        "date": "2020",
        "region": "north of east",
        "sales": 6,
      },
      {
        "__Dim_ColorId__": "north of east-C-discount",
        "__Dim_Color__": "north of east-C-discount",
        "__Dim_Detail__": "north of east-C-discount",
        "__Dim_X__": "2020",
        "__MeaId__": "discount",
        "__MeaName__": "discount",
        "__MeaValue__": 0.5,
        "__OriginalData__": {
          "city": "C",
          "date": "2020",
          "discount": 0.5,
          "profit": 3,
          "region": "north of east",
          "sales": 6,
        },
        "city": "C",
        "date": "2020",
        "discount": 0.5,
        "region": "north of east",
      },
      {
        "__Dim_ColorId__": "north of east-D-profit",
        "__Dim_Color__": "north of east-D-profit",
        "__Dim_Detail__": "north of east-D-profit",
        "__Dim_X__": "2020",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 5,
        "__OriginalData__": {
          "city": "D",
          "date": "2020",
          "discount": 0.5,
          "profit": 5,
          "region": "north of east",
          "sales": 10,
        },
        "city": "D",
        "date": "2020",
        "profit": 5,
        "region": "north of east",
      },
      {
        "__Dim_ColorId__": "north of east-D-sales",
        "__Dim_Color__": "north of east-D-sales",
        "__Dim_Detail__": "north of east-D-sales",
        "__Dim_X__": "2020",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 10,
        "__OriginalData__": {
          "city": "D",
          "date": "2020",
          "discount": 0.5,
          "profit": 5,
          "region": "north of east",
          "sales": 10,
        },
        "city": "D",
        "date": "2020",
        "region": "north of east",
        "sales": 10,
      },
      {
        "__Dim_ColorId__": "north of east-D-discount",
        "__Dim_Color__": "north of east-D-discount",
        "__Dim_Detail__": "north of east-D-discount",
        "__Dim_X__": "2020",
        "__MeaId__": "discount",
        "__MeaName__": "discount",
        "__MeaValue__": 0.5,
        "__OriginalData__": {
          "city": "D",
          "date": "2020",
          "discount": 0.5,
          "profit": 5,
          "region": "north of east",
          "sales": 10,
        },
        "city": "D",
        "date": "2020",
        "discount": 0.5,
        "region": "north of east",
      },
      {
        "__Dim_ColorId__": "north of east-E-profit",
        "__Dim_Color__": "north of east-E-profit",
        "__Dim_Detail__": "north of east-E-profit",
        "__Dim_X__": "2020",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 4,
        "__OriginalData__": {
          "city": "E",
          "date": "2020",
          "discount": 0.5,
          "profit": 4,
          "region": "north of east",
          "sales": 8,
        },
        "city": "E",
        "date": "2020",
        "profit": 4,
        "region": "north of east",
      },
      {
        "__Dim_ColorId__": "north of east-E-sales",
        "__Dim_Color__": "north of east-E-sales",
        "__Dim_Detail__": "north of east-E-sales",
        "__Dim_X__": "2020",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 8,
        "__OriginalData__": {
          "city": "E",
          "date": "2020",
          "discount": 0.5,
          "profit": 4,
          "region": "north of east",
          "sales": 8,
        },
        "city": "E",
        "date": "2020",
        "region": "north of east",
        "sales": 8,
      },
      {
        "__Dim_ColorId__": "north of east-E-discount",
        "__Dim_Color__": "north of east-E-discount",
        "__Dim_Detail__": "north of east-E-discount",
        "__Dim_X__": "2020",
        "__MeaId__": "discount",
        "__MeaName__": "discount",
        "__MeaValue__": 0.5,
        "__OriginalData__": {
          "city": "E",
          "date": "2020",
          "discount": 0.5,
          "profit": 4,
          "region": "north of east",
          "sales": 8,
        },
        "city": "E",
        "date": "2020",
        "discount": 0.5,
        "region": "north of east",
      },
    ],
  },
  "direction": "vertical",
  "label": {
    "dataFilter": [Function],
    "formatMethod": [Function],
    "overlap": {
      "clampForce": true,
      "hideOnHit": true,
    },
    "position": undefined,
    "smartInvert": false,
    "style": {
      "background": undefined,
      "fill": undefined,
      "fontSize": undefined,
      "fontWeight": undefined,
      "stroke": "#fff",
    },
    "visible": true,
  },
  "large": false,
  "largeThreshold": Infinity,
  "legends": {
    "autoPage": true,
    "item": {
      "background": {
        "state": {
          "selectedHover": {
            "fill": "#646A73",
            "fillOpacity": 0.05,
          },
          "unSelectedHover": {
            "fill": null,
          },
        },
      },
      "focus": true,
      "focusIconStyle": {
        "fill": "#646A73",
        "fontWeight": 400,
        "size": 14,
      },
      "label": {
        "formatMethod": [Function],
        "state": {
          "unSelected": {
            "fill": "#646A73",
            "fillOpacity": 0.8,
          },
        },
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
      },
      "maxWidth": "30%",
      "shape": {
        "space": 4,
        "state": {
          "unSelected": {
            "fillOpacity": 1,
            "opacity": 0.2,
          },
        },
        "style": [Function],
      },
    },
    "maxCol": 2,
    "maxRow": 2,
    "orient": "right",
    "padding": 0,
    "position": "start",
    "type": "discrete",
    "visible": true,
  },
  "padding": 0,
  "progressiveStep": 400,
  "progressiveThreshold": Infinity,
  "region": [
    {
      "clip": true,
    },
  ],
  "seriesField": "__Dim_ColorId__",
  "stackCornerRadius": [Function],
  "tooltip": {
    "dimension": {
      "content": [
        {
          "hasShape": true,
          "key": "profit",
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
      ],
      "title": {
        "visible": true,
      },
    },
    "mark": {
      "content": [
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
      ],
      "title": {
        "visible": false,
      },
    },
    "style": {
      "keyLabel": {
        "fontColor": "#606773",
        "fontSize": 12,
        "lineHeight": 12,
      },
      "panel": {
        "backgroundColor": "#fff",
        "border": {
          "color": "#e3e5e8",
          "radius": 12,
          "width": 1,
        },
        "padding": 7,
      },
      "titleLabel": {
        "fontColor": "#21252c",
        "fontSize": 12,
        "fontWeight": "bold",
        "lineHeight": 12,
      },
      "valueLabel": {
        "fontColor": "#21252c",
        "fontSize": 12,
        "fontWeight": "medium",
        "lineHeight": 12,
      },
    },
    "visible": true,
  },
  "type": "bar",
  "xField": [
    "__Dim_X__",
    "__Dim_Detail__",
  ],
  "yField": "__MeaValue__",
}
`;

exports[`border 3`] = `
{
  "advancedPipeline": [
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
  ],
  "colorIdMap": {
    "east-A-discount": {
      "alias": "east-A-discount",
      "id": "east-A-discount",
    },
    "east-A-profit": {
      "alias": "east-A-profit",
      "id": "east-A-profit",
    },
    "east-A-sales": {
      "alias": "east-A-sales",
      "id": "east-A-sales",
    },
    "east-B-discount": {
      "alias": "east-B-discount",
      "id": "east-B-discount",
    },
    "east-B-profit": {
      "alias": "east-B-profit",
      "id": "east-B-profit",
    },
    "east-B-sales": {
      "alias": "east-B-sales",
      "id": "east-B-sales",
    },
    "east-C-discount": {
      "alias": "east-C-discount",
      "id": "east-C-discount",
    },
    "east-C-profit": {
      "alias": "east-C-profit",
      "id": "east-C-profit",
    },
    "east-C-sales": {
      "alias": "east-C-sales",
      "id": "east-C-sales",
    },
    "east-D-discount": {
      "alias": "east-D-discount",
      "id": "east-D-discount",
    },
    "east-D-profit": {
      "alias": "east-D-profit",
      "id": "east-D-profit",
    },
    "east-D-sales": {
      "alias": "east-D-sales",
      "id": "east-D-sales",
    },
    "east-E-discount": {
      "alias": "east-E-discount",
      "id": "east-E-discount",
    },
    "east-E-profit": {
      "alias": "east-E-profit",
      "id": "east-E-profit",
    },
    "east-E-sales": {
      "alias": "east-E-sales",
      "id": "east-E-sales",
    },
    "north of east-A-discount": {
      "alias": "north of east-A-discount",
      "id": "north of east-A-discount",
    },
    "north of east-A-profit": {
      "alias": "north of east-A-profit",
      "id": "north of east-A-profit",
    },
    "north of east-A-sales": {
      "alias": "north of east-A-sales",
      "id": "north of east-A-sales",
    },
    "north of east-B-discount": {
      "alias": "north of east-B-discount",
      "id": "north of east-B-discount",
    },
    "north of east-B-profit": {
      "alias": "north of east-B-profit",
      "id": "north of east-B-profit",
    },
    "north of east-B-sales": {
      "alias": "north of east-B-sales",
      "id": "north of east-B-sales",
    },
    "north of east-C-discount": {
      "alias": "north of east-C-discount",
      "id": "north of east-C-discount",
    },
    "north of east-C-profit": {
      "alias": "north of east-C-profit",
      "id": "north of east-C-profit",
    },
    "north of east-C-sales": {
      "alias": "north of east-C-sales",
      "id": "north of east-C-sales",
    },
    "north of east-D-discount": {
      "alias": "north of east-D-discount",
      "id": "north of east-D-discount",
    },
    "north of east-D-profit": {
      "alias": "north of east-D-profit",
      "id": "north of east-D-profit",
    },
    "north of east-D-sales": {
      "alias": "north of east-D-sales",
      "id": "north of east-D-sales",
    },
    "north of east-E-discount": {
      "alias": "north of east-E-discount",
      "id": "north of east-E-discount",
    },
    "north of east-E-profit": {
      "alias": "north of east-E-profit",
      "id": "north of east-E-profit",
    },
    "north of east-E-sales": {
      "alias": "north of east-E-sales",
      "id": "north of east-E-sales",
    },
  },
  "colorItems": [
    {
      "alias": "east-A-profit",
      "id": "east-A-profit",
    },
    {
      "alias": "east-A-sales",
      "id": "east-A-sales",
    },
    {
      "alias": "east-A-discount",
      "id": "east-A-discount",
    },
    {
      "alias": "east-B-profit",
      "id": "east-B-profit",
    },
    {
      "alias": "east-B-sales",
      "id": "east-B-sales",
    },
    {
      "alias": "east-B-discount",
      "id": "east-B-discount",
    },
    {
      "alias": "east-C-profit",
      "id": "east-C-profit",
    },
    {
      "alias": "east-C-sales",
      "id": "east-C-sales",
    },
    {
      "alias": "east-C-discount",
      "id": "east-C-discount",
    },
    {
      "alias": "east-D-profit",
      "id": "east-D-profit",
    },
    {
      "alias": "east-D-sales",
      "id": "east-D-sales",
    },
    {
      "alias": "east-D-discount",
      "id": "east-D-discount",
    },
    {
      "alias": "east-E-profit",
      "id": "east-E-profit",
    },
    {
      "alias": "east-E-sales",
      "id": "east-E-sales",
    },
    {
      "alias": "east-E-discount",
      "id": "east-E-discount",
    },
    {
      "alias": "north of east-A-profit",
      "id": "north of east-A-profit",
    },
    {
      "alias": "north of east-A-sales",
      "id": "north of east-A-sales",
    },
    {
      "alias": "north of east-A-discount",
      "id": "north of east-A-discount",
    },
    {
      "alias": "north of east-B-profit",
      "id": "north of east-B-profit",
    },
    {
      "alias": "north of east-B-sales",
      "id": "north of east-B-sales",
    },
    {
      "alias": "north of east-B-discount",
      "id": "north of east-B-discount",
    },
    {
      "alias": "north of east-C-profit",
      "id": "north of east-C-profit",
    },
    {
      "alias": "north of east-C-sales",
      "id": "north of east-C-sales",
    },
    {
      "alias": "north of east-C-discount",
      "id": "north of east-C-discount",
    },
    {
      "alias": "north of east-D-profit",
      "id": "north of east-D-profit",
    },
    {
      "alias": "north of east-D-sales",
      "id": "north of east-D-sales",
    },
    {
      "alias": "north of east-D-discount",
      "id": "north of east-D-discount",
    },
    {
      "alias": "north of east-E-profit",
      "id": "north of east-E-profit",
    },
    {
      "alias": "north of east-E-sales",
      "id": "north of east-E-sales",
    },
    {
      "alias": "north of east-E-discount",
      "id": "north of east-E-discount",
    },
  ],
  "hasTheme": true,
  "specPipeline": [
    [Function],
  ],
  "themeMapKeys": [
    "light",
    "dark",
  ],
}
`;
